Generated/Compiler.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Compiler.java */
public class Compiler/*@bgen(jjtree)*/implements CompilerTreeConstants, CompilerConstants {/*@bgen(jjtree)*/
  protected static JJTCompilerState jjtree = new JJTCompilerState();
  public static void main(String args[]) throws Exception {
    //Compiler parser = new Compiler(new java.io.FileReader(args[0]));
    Compiler parser = new Compiler(System.in);
    ASTProgram expr=parser.program();
    TreeWalk v=new TreeWalk();
    expr.jjtAccept(v,null);
  }

  static final public ASTProgram program() throws ParseException {
 /*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(K_PROGRAM);
      jj_consume_token(IDENTIFIER);
      jj_consume_token(K_LCURLY);
      programBody();
      jj_consume_token(K_RCURLY);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                System.out.println("Match program");
                {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void programBody() throws ParseException {
 /*@bgen(jjtree) ProgramBody */
  ASTProgramBody jjtn000 = new ASTProgramBody(JJTPROGRAMBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_FUNCTION:
        case K_PROCEDURE:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_FUNCTION:
          function();
          break;
        case K_PROCEDURE:
          procedure();
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;

    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void function() throws ParseException {
 /*@bgen(jjtree) Function */
  ASTFunction jjtn000 = new ASTFunction(JJTFUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t; Token t2;
    try {
      if (jj_2_1(5)) {
        jj_consume_token(K_FUNCTION);
        type();
        t2 = jj_consume_token(IDENTIFIER);
        jj_consume_token(K_LPAREN);
        jj_consume_token(K_RPAREN);
        jj_consume_token(K_LCURLY);
        body();
        jj_consume_token(K_RCURLY);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("Param","false");
                jjtn000.data.put("type",t.image);
                jjtn000.data.put("funcName",t2.image);
                System.out.println("Matched Function");
      } else if (jj_2_2(5)) {
        jj_consume_token(K_FUNCTION);
        type();
        t2 = jj_consume_token(IDENTIFIER);
        jj_consume_token(K_LPAREN);
        parameterList();
        jj_consume_token(K_RPAREN);
        jj_consume_token(K_LCURLY);
        body();
        jj_consume_token(K_RCURLY);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("Param","true");
                jjtn000.data.put("type",t.image);
                jjtn000.data.put("funcName",t2.image);
                System.out.println("Matched Function");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void type() throws ParseException {
 /*@bgen(jjtree) Type */
  ASTType jjtn000 = new ASTType(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_INTEGER:
        jj_consume_token(K_INTEGER);
        break;
      case K_DOUBLE:
        jj_consume_token(K_DOUBLE);
        break;
      case K_STRING:
        jj_consume_token(K_STRING);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;

    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void procedure() throws ParseException {
 /*@bgen(jjtree) Procedure */
  ASTProcedure jjtn000 = new ASTProcedure(JJTPROCEDURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_3(4)) {
        jj_consume_token(K_PROCEDURE);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(K_LPAREN);
        jj_consume_token(K_RPAREN);
        jj_consume_token(K_LCURLY);
        body();
        jj_consume_token(K_RCURLY);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;

      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_PROCEDURE:
          jj_consume_token(K_PROCEDURE);
          jj_consume_token(IDENTIFIER);
          jj_consume_token(K_LPAREN);
          parameterList();
          jj_consume_token(K_RPAREN);
          jj_consume_token(K_LCURLY);
          body();
          jj_consume_token(K_RCURLY);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;

          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void parameterList() throws ParseException {
 /*@bgen(jjtree) ParameterList */
  ASTParameterList jjtn000 = new ASTParameterList(JJTPARAMETERLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      parameter();
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_2;
        }
        jj_consume_token(K_COMMA);
        parameter();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;

    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void parameter() throws ParseException {
 /*@bgen(jjtree) Parameter */
  ASTParameter jjtn000 = new ASTParameter(JJTPARAMETER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_INTEGER:
        jj_consume_token(K_INTEGER);
        t = jj_consume_token(IDENTIFIER);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_LBRACKET:
          jj_consume_token(K_LBRACKET);
          jj_consume_token(K_RBRACKET);
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
                                                                 jjtree.closeNodeScope(jjtn000, true);
                                                                 jjtc000 = false;
                jjtn000.data.put("type","INTEGERARRAY");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
        break;
      case K_DOUBLE:
        jj_consume_token(K_DOUBLE);
        t = jj_consume_token(IDENTIFIER);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_LBRACKET:
          jj_consume_token(K_LBRACKET);
          jj_consume_token(K_RBRACKET);
          break;
        default:
          jj_la1[6] = jj_gen;
          ;
        }
                                                                jjtree.closeNodeScope(jjtn000, true);
                                                                jjtc000 = false;
                jjtn000.data.put("type","DOUBLEARRAY");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
        break;
      case K_STRING:
        jj_consume_token(K_STRING);
        t = jj_consume_token(IDENTIFIER);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_LBRACKET:
          jj_consume_token(K_LBRACKET);
          jj_consume_token(K_RBRACKET);
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
                                                                jjtree.closeNodeScope(jjtn000, true);
                                                                jjtc000 = false;
                jjtn000.data.put("type","STRINGARRAY");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void body() throws ParseException {
 /*@bgen(jjtree) Body */
  ASTBody jjtn000 = new ASTBody(JJTBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_DO:
        case K_DOUBLE:
        case K_FUNCTION:
        case K_IF:
        case K_INTEGER:
        case K_PRINT_DOUBLE:
        case K_PRINT_INTEGER:
        case K_PRINT_STRING:
        case K_PROCEDURE:
        case K_READ_DOUBLE:
        case K_READ_INTEGER:
        case K_READ_STRING:
        case K_RETURN:
        case K_STRING:
        case K_WHILE:
        case IDENTIFIER:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_FUNCTION:
          function();
          break;
        case K_PROCEDURE:
          procedure();
          break;
        case K_DOUBLE:
        case K_INTEGER:
        case K_PRINT_DOUBLE:
        case K_PRINT_INTEGER:
        case K_PRINT_STRING:
        case K_READ_DOUBLE:
        case K_READ_INTEGER:
        case K_READ_STRING:
        case K_RETURN:
        case K_STRING:
        case IDENTIFIER:
          expression();
          break;
        case K_DO:
          doLoop();
          break;
        case K_WHILE:
          whileLoop();
          break;
        case K_IF:
          ifThen();
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;

    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void expression() throws ParseException {
 /*@bgen(jjtree) Expression */
  ASTExpression jjtn000 = new ASTExpression(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_4(2147483647)) {
        declaration();
        jj_consume_token(K_SEMI);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("type","Variable Declaration");
      } else if (jj_2_5(2147483647)) {
        assignment();
        jj_consume_token(K_SEMI);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("type","Variable Assignment");
      } else if (jj_2_6(2147483647)) {
        functionCall();
        jj_consume_token(K_SEMI);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;

      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_RETURN:
          jj_consume_token(K_RETURN);
          value();
          jj_consume_token(K_SEMI);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;

          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void declaration() throws ParseException {
 /*@bgen(jjtree) Declaration */
  ASTDeclaration jjtn000 = new ASTDeclaration(JJTDECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      if (jj_2_7(4)) {
        jj_consume_token(K_INTEGER);
        t = jj_consume_token(IDENTIFIER);
        jj_consume_token(K_LBRACKET);
        jj_consume_token(K_RBRACKET);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("type","INTEGERARRAY");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
      } else if (jj_2_8(4)) {
        jj_consume_token(K_DOUBLE);
        t = jj_consume_token(IDENTIFIER);
        jj_consume_token(K_LBRACKET);
        jj_consume_token(K_RBRACKET);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("type","DOUBLEARRAY");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
      } else if (jj_2_9(4)) {
        jj_consume_token(K_STRING);
        t = jj_consume_token(IDENTIFIER);
        jj_consume_token(K_LBRACKET);
        jj_consume_token(K_RBRACKET);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("type","STRINGARRAY");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_INTEGER:
          jj_consume_token(K_INTEGER);
          t = jj_consume_token(IDENTIFIER);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case K_ASSIGN:
            jj_consume_token(K_ASSIGN);
            value();
            break;
          default:
            jj_la1[12] = jj_gen;
            ;
          }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("type","INTEGER");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
          break;
        case K_DOUBLE:
          jj_consume_token(K_DOUBLE);
          t = jj_consume_token(IDENTIFIER);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case K_ASSIGN:
            jj_consume_token(K_ASSIGN);
            value();
            break;
          default:
            jj_la1[13] = jj_gen;
            ;
          }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("type","DOUBLE");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
          break;
        case K_STRING:
          jj_consume_token(K_STRING);
          t = jj_consume_token(IDENTIFIER);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case K_ASSIGN:
            jj_consume_token(K_ASSIGN);
            value();
            break;
          default:
            jj_la1[14] = jj_gen;
            ;
          }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
                jjtn000.data.put("type","STRING");
                jjtn000.data.put("value",t.image);
                jjtn000.data.put("lineNo",t.beginLine);
                System.out.println("Declared integer");
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
